fix(tatler): Remove letter spacing from h1 items

--- a/packages/merlin-www-common/sass/tatler/_variables.scss
+++ b/packages/merlin-www-common/sass/tatler/_variables.scss
@@ -340,7 +340,7 @@ $HEADINGS: (
         large: 62px,
         large-line-height: 67px,
         weight: normal,
-        letter-spacing: 1px
+        letter-spacing: 0
     ),
     beta: (
         h: h2,
